add interceptor, mock-implementation and server
