# src/app/features/reisen/api/api/api.ts
@@ -1,0 +1,3 @@
+export * from './angebot.service';
+import {AngebotService} from './angebot.service';
+export const APIS = [AngebotService];
