# src/app/features/reisen/api/model/models.ts
@@ -1,0 +1,4 @@
+export * from './angebotDetailsDto';
+export * from './changeAngebotQueryDto';
+export * from './pageDtoAngebotDetailsDto';
+export * from './searchAngebotQueryDto';
