# src/app/features/reisen/api/model/pageDtoAngebotDetailsDto.ts
@@ -1,0 +1,15 @@
+/**
+ * OpenAPI definition
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import {AngebotDetailsDto} from './angebotDetailsDto';
+
+export interface PageDtoAngebotDetailsDto {
+    elements: Array<AngebotDetailsDto>;
+    totalCount: number;
+}
